--- a/style.css
+++ b/style.css
@@ -814,6 +814,7 @@ footer span a:hover{
         background: transparent;
         color: var(--color-black);
         margin-right: 1rem;
+	font-size: 50px;
     }
 
     nav button#close-btn {
